idea inspection fixed: Immutable collection creation can be replaced with collection factory call